# patterns_cpp

./: CMakeLists.txt  README.md  decorator_simple.cpp  fabrics.cpp  factory_method.cpp  observer_simple.cpp  proxy.cpp  singleton.cpp  strategy.cpp  wrapper.cpp
